--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.2",
+    "aws-cdk": "2.147.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
-    "aws-cdk": "2.147.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.147.0",
     "constructs": "^10.0.0",
+    "esbuild": "^0.23.0",
+    "hono": "^4.5.3",
+    "prettier": "^3.3.3",
     "source-map-support": "^0.5.21"
   }
 }
